--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,18 @@
     background-color: #04381a;
 }
 
+.section-heading h2{
+    font-size: 48px;
+    font-weight: bold;
+    color:#001931;
+}
+
+.section-heading p {
+    font-size: 16px;
+    line-height: 20px;
+    color: #627382;
+}
+
 header {
     background-color: #ffffff;
     margin-top: 16px;
@@ -54,11 +66,17 @@ header nav .menu {
     align-items: center;
     list-style: none;
 }
+
 header nav .menu li a {
     text-decoration: none;
     font-size: 16px;
     font-weight: 500;
     color: #000000;
+}
+
+.menu li a:hover {
+    color: #34d675;
+    /* padding: 12px 16px; */
 }
 
 #banner {
@@ -145,3 +163,64 @@ header nav .menu li a {
     align-items: center;
     gap: 5px; 
 }
+
+#problem .problem-container .section-heading {
+    text-align: center;
+    margin-top: 50px;
+}
+
+#problem .problem-container .section-heading h2{
+    margin-bottom: 16px;
+}
+/* #problem .problem-container .section-heading p{
+    margin-bottom: 44px;
+} */
+.problem-container .problem-info {
+    display: flex;
+    justify-content: space-between;
+    gap: 24px;
+}
+
+.problem-container .problem-info .info-card {
+    /* border: 1px solid red; */
+    text-align: center;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;     
+    padding: 24px;
+    max-height: 300px;  
+    max-width: 322px;
+    border-radius: 8px;
+    box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.06);
+}
+
+
+.problem-info .info-card .icon-wrapper {
+    background-color: #F95555;
+    width: 60px;
+    height: 60px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    border-radius: 50%;
+    margin: 0 auto 16px;
+}
+
+.icon-wrapper img {
+    width: 32px;
+    height: 32px;
+}
+
+.problem-container .info-card h3 {
+    font-size: 24px;
+    font-weight: 600;
+    color: #001931;
+    margin-bottom: 16px;
+}
+
+
+.problem-container .info-card 
