--- a/styles.css
+++ b/styles.css
@@ -315,3 +315,99 @@ header nav .menu li a {
     margin-bottom: 16px;
 }
 
+footer {
+    margin-top: 120px;
+    /* background-color: #78b0e4; */
+    background-color: #001931;
+}
+
+.footer-container {
+    padding: 120px 0 30px 0;
+    margin: 0 auto;
+    color: #FFFFFF;
+}
+
+.footer-container .logo-social {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 80px;
+}
+
+.footer-container .logo-social .social-part {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    text-align: left;
+    margin-right: 107px;
+    gap: 16px;
+}
+
+.footer-container .logo-social img {
+    max-width: 139;
+    width: 100%;
+    max-height: 60;
+    height: 100%;
+}
+.footer-container .logo-social .logo {
+    width: 100%;
+    max-width: 139px;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.footer-container .logo-social .logo img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    display: block;
+}
+
+
+.footer-container .logo-social .social-part p {
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 28px;
+}
+
+.footer-container .logo-social .social-part .social-icon {
+    display: flex;
+    align-items: start;
+    text-align: center;
+    gap: 16px;
+    /* background-color: #FFFFFF; */
+}
+
+.social-icon .icon {
+    background-color: #FFFFFF;
+    width: 20px;
+    height: 20px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    border-radius: 50%;
+}
+
+.footer-container .logo-social .social-part .social-icon i {
+    color: #000000;
+}
+
+.footer-container hr {
+    font-weight: 1px solid #E5E7EB;
+    margin-bottom: 30px;
+}
+
+.footer-container .copyright p {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #FAFAFA;
+    font-size: 18px;
+    line-height: 24px;
+}
+
+
+
