--- a/styles.css
+++ b/styles.css
@@ -53,13 +53,13 @@
 
 header {
     background-color: #ffffff;
-    margin-top: 16px;
 }
 
-header nav {
+#header nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 16px 0;
 }
 
 header nav .logo img {
@@ -88,7 +88,8 @@ header nav .menu li a {
 }
 
 #banner {
-    max-width: 1600px;
+    width: 100%;
+    /* max-width: 1600px; */
     height: 674px;
     margin: 0 auto;
     background-image: url("./assets/hero-bg.png");
@@ -115,6 +116,8 @@ header nav .menu li a {
     line-height: 84px;
     margin-bottom: 16px;
     max-width: 770px;
+    text-align: center;
+    text-transform: capitalize;
 }
 
 .banner-container .banner-heading #part1 {
@@ -129,6 +132,17 @@ header nav .menu li a {
     line-height: 24px;
     color: #ffffff;
     margin-bottom: 32px;
+
+    /* background-color: #F95555; */
+    /* 
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center; */
+}
+
+.banner-container .description-text p {
+    text-align: center;
 }
 
 #banner .banner-container div {
@@ -291,7 +305,7 @@ header nav .menu li a {
 }
 
 #access {
-    margin-top: 120px;
+    margin-top: 120px ;
 }
 
 #access .access-container {
@@ -316,9 +330,13 @@ header nav .menu li a {
 }
 
 footer {
-    margin-top: 120px;
-    /* background-color: #78b0e4; */
+    width: 100%;
+    margin: 0 auto;
     background-color: #001931;
+}
+
+#footer {
+    margin-top: 120px;
 }
 
 .footer-container {
