--- a/styles.css
+++ b/styles.css
@@ -396,6 +396,13 @@ footer {
     border-radius: 50%;
 }
 
+.footer-container .logo-social .social-part .social-icon a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+}
+
 .footer-container .logo-social .social-part .social-icon i {
     color: #000000;
 }
